@@ -1,0 +1,24 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML>
+  <HEAD>
+     <title>The %(listname)s %(archive)s Archiv nach %(archtype)s</title>
+     <META NAME="robots" CONTENT="noindex,follow">
+     %(encoding)s
+  </HEAD>
+  <BODY BGCOLOR="#ffffff">
+      <a name="start"></A>
+      <h1>%(archive)s Archiv nach %(archtype)s</h1>
+      <ul>
+         <li> <b>Nachrichten sortiert nach:</b>
+	        %(thread_ref)s
+		%(subject_ref)s
+		%(author_ref)s
+		%(date_ref)s
+
+	     <li><b><a href="%(listinfo)s">Weitere Informationen über diese Liste ...
+                    </a></b></li>
+      </ul>
+      <p><b>Von:</b> <i>%(firstdate)s</i><br>
+         <b>Bis:</b> <i>%(lastdate)s</i><br>
+         <b>Nachrichten:</b> %(size)s<p>
+     <ul>
