@@ -1,0 +1,20 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML>
+  <HEAD>
+     <title>Das %(listname)s Archiv</title>
+     <META NAME="robots" CONTENT="noindex,follow">
+     %(meta)s
+  </HEAD>
+  <BODY BGCOLOR="#ffffff">
+     <h1>Das %(listname)s Archiv </h1>
+     <p>
+      Über diese Liste können <a href="%(listinfo)s">weitere Informationen angesehen werden,</a>
+      oder das gesamte Archiv kann <a href="%(fullarch)s">heruntergeladen werden</a>
+      (%(size)s).
+     </p>
+     %(noarchive_msg)s
+     %(archive_listing_start)s
+     %(archive_listing)s
+     %(archive_listing_end)s
+     </BODY>
+     </HTML>
