@@ -1,0 +1,18 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML>
+  <HEAD>
+     <title>Das %(listname)s Archiv</title>
+     <META NAME="robots" CONTENT="noindex,follow">
+     %(meta)s
+  </HEAD>
+  <BODY BGCOLOR="#ffffff">
+     <h1>Das %(listname)s Archiv </h1>
+     <p>
+      Über diese Liste <a href="%(listinfo)s">gibt es weitere Informationen</a>.
+     </p>
+     %(noarchive_msg)s
+     %(archive_listing_start)s
+     %(archive_listing)s
+     %(archive_listing_end)s
+     </BODY>
+     </HTML>
