@@ -60,6 +60,8 @@ Here is a history of user visible changes to Mailman.
 
   i18n
 
+    - Added some missing German templates from Egon Frerich.
+
     - Added Greek translation from Antonis Limperis.
 
     - A few errors in the Basque translation are fixed.  Bug #836861.
